add RedirectController
