# back-short-link/src/main/java/ru/arsentiev/backshortlink/mappers/LinkResponseMapper.java
@@ -1,5 +1,6 @@
 package ru.arsentiev.backshortlink.mappers;
 
+import org.mapstruct.Context;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import ru.arsentiev.backshortlink.dto.LinkResponse;
@@ -9,5 +10,6 @@ import ru.arsentiev.backshortlink.entity.Link;
 public interface LinkResponseMapper {
     @Mapping(source = "category.title", target = "titleCategory")
     @Mapping(source = "user.username", target = "username")
-    LinkResponse linkToDto(Link link);
+    @Mapping(target = "shortLink", expression = "java(startUrl + link.getShortLink())")
+    LinkResponse linkToDto(Link link, @Context String startUrl);
 }
